updated readme and get-started-guide